Added default constructor as a work-around for a gcc bug. See this bug report: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=67054